# scicomp-p3-finance

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  submit_job.sh
config/: config.py
output/: backtest_summary.json  classification_metrics.json  gru_sweep.json  metrics.json  models_comparison.json
services/: algorithm.py  backtesting.py  gru.py  hyperparameter_sweep.py  lstm.py  pipeline.py  rnn_base.py  stock.py  transform.py  xgboost.py
services/algorithms/: __init__.py  base.py  ensemble.py  logistic_regression.py  random_forest.py  svc.py
services/backtesting/: __init__.py  allocation_manager.py  backtest.py  metrics_calculator.py  plot_generator.py  position_normalizer.py  return_calculator.py
services/log/: __init__.py  logger_config.py  reporters.py
services/pipeline/: __init__.py  metrics_evaluator.py  model_selector.py  pipeline.py  reporter.py
services/plotting/: __init__.py  model_metrics.py  plot_generator.py  portfolio_plots.py  strategy_plots.py  threshold_plots.py
services/reproducibility/: __init__.py  reproducibility_manager.py
services/stock/: __init__.py  stock.py  transform.py
services/strategies/: __init__.py  base_strategy.py  buy_and_hold_strategy.py  ensemble_smart_strategy.py  fixed_income_strategy.py  mean_reversion_strategy.py  momentum_strategy.py  simple_reversal_strategy.py  threshold_strategy.py  volatility_weighted_strategy.py
tests/: test_allocation_manager.py  test_integration.py  test_metrics_calculator.py  test_position_normalizer.py  test_return_calculator.py
utils/: walk_forward.py
(+2 files in other folders)
