[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scicomp-p3-finance"
version = "0.1.0"
description = "Quantitative Finance Backtesting and ML Pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "yfinance",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]
